Add raw data folder and tasks CSV

--- a/01_generate_dataset.ipynb
+++ b/01_generate_dataset.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "e66b7e50",
    "metadata": {},
    "outputs": [
@@ -82,104 +82,104 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1</td>\n",
-       "      <td>History different skin.</td>\n",
-       "      <td>Medium</td>\n",
-       "      <td>2025-10-07 13:26:36.309552</td>\n",
-       "      <td>2025-10-08 08:57:02.856936</td>\n",
-       "      <td>19.507374</td>\n",
-       "      <td>Completed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Source meeting relationship store.</td>\n",
-       "      <td>Medium</td>\n",
-       "      <td>2025-10-07 17:17:10.042538</td>\n",
-       "      <td>2025-10-08 03:20:59.082208</td>\n",
-       "      <td>10.063622</td>\n",
-       "      <td>Completed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Want prove leave want common last.</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>2025-10-07 17:36:32.040249</td>\n",
-       "      <td>2025-10-09 01:44:04.997562</td>\n",
-       "      <td>32.125821</td>\n",
-       "      <td>Completed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Meeting rich perhaps near eye.</td>\n",
-       "      <td>High</td>\n",
-       "      <td>2025-10-08 03:47:32.054472</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Pending</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Across age your.</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>2025-10-08 07:50:28.092862</td>\n",
-       "      <td>2025-10-09 23:57:05.437000</td>\n",
-       "      <td>40.110373</td>\n",
-       "      <td>Completed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>1</td>\n",
-       "      <td>Board sort relate power.</td>\n",
-       "      <td>High</td>\n",
-       "      <td>2025-10-10 02:11:12.199272</td>\n",
-       "      <td>2025-10-12 16:31:06.227727</td>\n",
-       "      <td>62.331675</td>\n",
+       "      <td>Exactly cover project deal decide.</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>2025-10-09 17:55:37.439291</td>\n",
+       "      <td>2025-10-10 08:22:53.733058</td>\n",
+       "      <td>14.454526</td>\n",
        "      <td>Completed</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <th>14</th>\n",
        "      <td>1</td>\n",
-       "      <td>Far maintain sister employee.</td>\n",
-       "      <td>High</td>\n",
-       "      <td>2025-10-14 14:15:35.696780</td>\n",
-       "      <td>2025-10-16 06:54:49.614703</td>\n",
-       "      <td>40.653866</td>\n",
-       "      <td>Completed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>1</td>\n",
-       "      <td>This service yet onto color.</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>2025-10-15 19:38:08.954478</td>\n",
-       "      <td>2025-10-18 00:32:20.266951</td>\n",
-       "      <td>52.903142</td>\n",
-       "      <td>Completed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Design night create structure family.</td>\n",
-       "      <td>High</td>\n",
-       "      <td>2025-10-17 02:23:16.627281</td>\n",
+       "      <td>Hard left street develop concern step.</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>2025-10-11 08:57:33.491921</td>\n",
        "      <td>NaT</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Postponed</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Republican reveal around sing.</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>2025-10-16 16:23:18.355268</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Not Completed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Lawyer can dark.</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>2025-10-17 00:46:51.661034</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Not Completed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>1</td>\n",
-       "      <td>Station life small include maintain this.</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>2025-10-18 16:32:35.084563</td>\n",
-       "      <td>2025-10-21 14:35:40.016419</td>\n",
-       "      <td>70.051370</td>\n",
+       "      <td>Speech tree number.</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>2025-10-19 21:15:11.162844</td>\n",
+       "      <td>2025-10-22 04:28:46.567920</td>\n",
+       "      <td>55.226501</td>\n",
        "      <td>Completed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Fall letter region customer.</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>2025-10-21 22:35:34.975258</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Not Completed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Station work peace discussion level find.</td>\n",
+       "      <td>High</td>\n",
+       "      <td>2025-10-22 05:46:28.633362</td>\n",
+       "      <td>2025-10-24 09:21:56.129556</td>\n",
+       "      <td>51.590971</td>\n",
+       "      <td>Completed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Old red success really sometimes.</td>\n",
+       "      <td>High</td>\n",
+       "      <td>2025-10-23 08:19:44.668031</td>\n",
+       "      <td>2025-10-24 07:20:07.872060</td>\n",
+       "      <td>23.006446</td>\n",
+       "      <td>Completed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Economy cause against apply type.</td>\n",
+       "      <td>High</td>\n",
+       "      <td>2025-10-23 14:43:42.094575</td>\n",
+       "      <td>2025-10-24 03:05:15.310765</td>\n",
+       "      <td>12.359227</td>\n",
+       "      <td>Completed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Eye visit public company may.</td>\n",
+       "      <td>High</td>\n",
+       "      <td>2025-10-24 22:12:56.123699</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Pending</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -187,43 +187,43 @@
       ],
       "text/plain": [
        "    user_id                                       task priority  \\\n",
-       "7         1                    History different skin.   Medium   \n",
-       "3         1         Source meeting relationship store.   Medium   \n",
-       "19        1         Want prove leave want common last.      Low   \n",
-       "5         1             Meeting rich perhaps near eye.     High   \n",
-       "18        1                           Across age your.      Low   \n",
-       "8         1                   Board sort relate power.     High   \n",
-       "12        1              Far maintain sister employee.     High   \n",
-       "17        1               This service yet onto color.      Low   \n",
-       "10        1      Design night create structure family.     High   \n",
-       "16        1  Station life small include maintain this.      Low   \n",
+       "8         1         Exactly cover project deal decide.   Medium   \n",
+       "14        1     Hard left street develop concern step.   Medium   \n",
+       "2         1             Republican reveal around sing.      Low   \n",
+       "19        1                           Lawyer can dark.   Medium   \n",
+       "16        1                        Speech tree number.   Medium   \n",
+       "1         1               Fall letter region customer.   Medium   \n",
+       "15        1  Station work peace discussion level find.     High   \n",
+       "11        1          Old red success really sometimes.     High   \n",
+       "18        1          Economy cause against apply type.     High   \n",
+       "13        1              Eye visit public company may.     High   \n",
        "\n",
        "                   created_at               completed_at  duration_hours  \\\n",
-       "7  2025-10-07 13:26:36.309552 2025-10-08 08:57:02.856936       19.507374   \n",
-       "3  2025-10-07 17:17:10.042538 2025-10-08 03:20:59.082208       10.063622   \n",
-       "19 2025-10-07 17:36:32.040249 2025-10-09 01:44:04.997562       32.125821   \n",
-       "5  2025-10-08 03:47:32.054472                        NaT             NaN   \n",
-       "18 2025-10-08 07:50:28.092862 2025-10-09 23:57:05.437000       40.110373   \n",
-       "8  2025-10-10 02:11:12.199272 2025-10-12 16:31:06.227727       62.331675   \n",
-       "12 2025-10-14 14:15:35.696780 2025-10-16 06:54:49.614703       40.653866   \n",
-       "17 2025-10-15 19:38:08.954478 2025-10-18 00:32:20.266951       52.903142   \n",
-       "10 2025-10-17 02:23:16.627281                        NaT             NaN   \n",
-       "16 2025-10-18 16:32:35.084563 2025-10-21 14:35:40.016419       70.051370   \n",
+       "8  2025-10-09 17:55:37.439291 2025-10-10 08:22:53.733058       14.454526   \n",
+       "14 2025-10-11 08:57:33.491921                        NaT             NaN   \n",
+       "2  2025-10-16 16:23:18.355268                        NaT             NaN   \n",
+       "19 2025-10-17 00:46:51.661034                        NaT             NaN   \n",
+       "16 2025-10-19 21:15:11.162844 2025-10-22 04:28:46.567920       55.226501   \n",
+       "1  2025-10-21 22:35:34.975258                        NaT             NaN   \n",
+       "15 2025-10-22 05:46:28.633362 2025-10-24 09:21:56.129556       51.590971   \n",
+       "11 2025-10-23 08:19:44.668031 2025-10-24 07:20:07.872060       23.006446   \n",
+       "18 2025-10-23 14:43:42.094575 2025-10-24 03:05:15.310765       12.359227   \n",
+       "13 2025-10-24 22:12:56.123699                        NaT             NaN   \n",
        "\n",
-       "       status  \n",
-       "7   Completed  \n",
-       "3   Completed  \n",
-       "19  Completed  \n",
-       "5     Pending  \n",
-       "18  Completed  \n",
-       "8   Completed  \n",
-       "12  Completed  \n",
-       "17  Completed  \n",
-       "10  Postponed  \n",
-       "16  Completed  "
+       "           status  \n",
+       "8       Completed  \n",
+       "14      Postponed  \n",
+       "2   Not Completed  \n",
+       "19  Not Completed  \n",
+       "16      Completed  \n",
+       "1   Not Completed  \n",
+       "15      Completed  \n",
+       "11      Completed  \n",
+       "18      Completed  \n",
+       "13        Pending  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
     "# -----------------------------\n",
     "# Step 5: Save to CSV\n",
     "# -----------------------------\n",
-    "df.to_csv('../data/raw/tasks_dataset.csv', index=False)\n",
+    "df.to_csv('data/raw/tasks_dataset.csv', index=False)\n",
     "\n",
     "# -----------------------------\n",
     "# Step 6: Preview dataset\n",
@@ -305,8 +305,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "14c06e7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('data/raw/tasks.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "350b3ff9",
    "metadata": {},
    "outputs": [],
    "source": []
