updating feature engineering code

--- a/Notebooks/03_Features enginering.ipynb
+++ b/Notebooks/03_Features enginering.ipynb
@@ -1582,46 +1582,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "id": "e8164169",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# ============================================================\n",
-    "# 1. Task-Level Feature Transformer\n",
-    "# ============================================================\n",
     "class TaskFeatureEngineer(BaseEstimator, TransformerMixin):\n",
     "    def __init__(self):\n",
     "        self.task_avg_completion_ = None\n",
     "        self.priority_mapping = {'Low': 0, 'Medium': 1, 'High': 2}\n",
     "\n",
     "    def fit(self, X, y=None):\n",
-    "        # compute task average completion on TRAIN ONLY\n",
     "        self.task_avg_completion_ = y.groupby(X['task_name']).mean()\n",
     "        return self\n",
     "\n",
     "    def transform(self, X):\n",
     "        X = X.copy()\n",
-    "\n",
-    "        # task avg completion\n",
     "        X['task_avg_completion'] = X['task_name'].map(self.task_avg_completion_).fillna(0)\n",
-    "\n",
-    "        # priority encoding\n",
     "        X['priority_encoded'] = X['priority'].map(self.priority_mapping)\n",
-    "\n",
-    "        # safely drop description\n",
     "        X = X.drop(columns=['description'], errors='ignore')\n",
-    "\n",
-    "        # drop task_id\n",
     "        X = X.drop(columns=['task_id'], errors='ignore')\n",
-    "\n",
     "        return X\n",
     "\n",
-    "\n",
-    "# ============================================================\n",
-    "# 2. Temporal Features\n",
-    "# ============================================================\n",
     "class TemporalFeatures(BaseEstimator, TransformerMixin):\n",
     "    def fit(self, X, y=None):\n",
     "        return self\n",
@@ -1629,56 +1611,45 @@
     "    def transform(self, X):\n",
     "        X = X.copy()\n",
     "        X['created_at'] = pd.to_datetime(X['created_at'])\n",
-    "\n",
     "        X['start_dayofweek'] = X['created_at'].dt.dayofweek\n",
     "        X['start_hour'] = X['created_at'].dt.hour\n",
     "        X['is_weekend'] = X['start_dayofweek'].isin([5,6]).astype(int)\n",
-    "\n",
     "        return X\n",
     "\n",
-    "\n",
-    "# ============================================================\n",
-    "# 3. Role-Based Aggregation (Target-Aware)\n",
-    "# ============================================================\n",
     "class RoleStats(BaseEstimator, TransformerMixin):\n",
     "    def fit(self, X, y):\n",
     "        df = X.copy()\n",
     "        df['target'] = y\n",
-    "\n",
     "        self.role_avg_ = df.groupby('role')['target'].mean()\n",
     "        self.role_std_ = df.groupby('role')['target'].std()\n",
-    "\n",
     "        return self\n",
     "\n",
     "    def transform(self, X):\n",
     "        X = X.copy()\n",
-    "\n",
     "        X['role_avg_completion'] = X['role'].map(self.role_avg_).fillna(self.role_avg_.mean())\n",
     "        X['role_completion_std'] = X['role'].map(self.role_std_).fillna(self.role_std_.mean())\n",
-    "\n",
     "        return X\n",
     "\n",
+    "def get_pipeline():\n",
+    "    from sklearn.pipeline import Pipeline\n",
+    "    from sklearn.compose import ColumnTransformer\n",
+    "    from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
-    "# ============================================================\n",
-    "# 4. Full Pipeline\n",
-    "# ============================================================\n",
-    "full_pipeline = Pipeline([\n",
-    "    (\"task_features\", TaskFeatureEngineer()),\n",
-    "    (\"temporal_features\", TemporalFeatures()),\n",
-    "    (\"role_features\", RoleStats()),\n",
-    "\n",
-    "    (\"encode_role\",\n",
-    "     ColumnTransformer([\n",
-    "         (\"onehot\", OneHotEncoder(handle_unknown=\"ignore\"), [\"role\"])\n",
-    "     ], remainder=\"passthrough\")\n",
-    "    )\n",
-    "])\n",
-    "\n"
+    "    return Pipeline([\n",
+    "        (\"task_features\", TaskFeatureEngineer()),\n",
+    "        (\"temporal_features\", TemporalFeatures()),\n",
+    "        (\"role_features\", RoleStats()),\n",
+    "        (\"encode_role\",\n",
+    "         ColumnTransformer([\n",
+    "             (\"onehot\", OneHotEncoder(handle_unknown=\"ignore\"), [\"role\"])\n",
+    "         ], remainder=\"passthrough\")\n",
+    "        )\n",
+    "    ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "id": "6190ac74",
    "metadata": {},
    "outputs": [
@@ -1688,13 +1659,14 @@
        "['feature_pipeline_unfitted.pkl']"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "joblib.dump(full_pipeline, \"feature_pipeline_unfitted.pkl\")"
+    "pipeline = get_pipeline()  # unfitted\n",
+    "joblib.dump(pipeline, \"feature_pipeline_unfitted.pkl\")"
    ]
   },
   {
